# TT--Litestar--User-Management

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 2025-04-15_add_table_user_413a103a5c72.py
data/: Diagram.drawio  TestTask.txt
migrations/versions/: 2025-04-15_add_table_user_413a103a5c72.py
scripts/: db_upgrade.sh
src/core/: config.py  exceptions.py
src/models/: users.py
src/routes/: __init__.py  users.py
src/routes/users/: __init__.py  controller.py  models.py  providers.py  repository.py  schemas.py
src/schemas/: users.py
