[project]
name = "tt-litestar-user-management"
version = "0.1.0"
description = "REST API для управления пользователями"
authors = [
    {name = "YóUnǎi"}
]
readme = "README.md"
requires-python = ">=3.12.3,<4.0"
dependencies = [
    "msgspec (>=0.18.6,<0.19.0)",
    "python-dotenv (>=1,<2)",
    "litestar[standard] (>=2.15.2,<3.0.0)",
    "litestar-asyncpg (>=0,<1)",
    "advanced-alchemy (>=0.20,<0.21)",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
